--- a/front/src/app/components/home/home.component.html
+++ b/front/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<p>Bienvenue dans le service client</p>
+<p>Welcome to the client support</p>
 
-<button class="btn btn-success" onclick=" window.open('http://localhost:4200/chat/2','_blank')">Utiliser en tant que client</button>
-<button class="btn btn-danger" onclick=" window.open('http://localhost:4200/chat/1','_blank')">Utiliser en tant que service client</button>
+<button class="btn btn-success" onclick=" window.open('http://localhost:4200/chat/2','_blank')">Use chat as a client</button>
+<button class="btn btn-danger" onclick=" window.open('http://localhost:4200/chat/1','_blank')">Use chat as a client support</button>
